crates/elif-http-derive/tests/ui/fail/http_method_on_struct.stderr
error: expected `fn`
 --> tests/ui/fail/http_method_on_struct.rs:7:5
  |
7 | pub struct BadStruct;
  |     ^^^^^^
